--- a/app/src/main/res/layout/best_calculator.xml
+++ b/app/src/main/res/layout/best_calculator.xml
@@ -1,214 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/bg">
+    android:padding="@dimen/default_padding"
+    android:columnCount="4"
+    tools:context=".ui.CalcActivity">
 
     <TextView
-        android:id="@+id/text_res"
-        android:layout_width="match_parent"
-        android:layout_height="196dp"
-        android:fontFamily="monospace"
-        android:background="#FFFFFF"
-        android:text="Hello"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        android:textDirection="rtl"
-        android:gravity="right"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/res"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="2dp">
+        android:layout_columnSpan="4"
+        android:layout_gravity="fill_horizontal"
+        android:textSize="@dimen/result_size"
+        android:gravity="end|bottom"
+        android:padding="@dimen/default_padding"
+        tools:text="322"
+        android:background="#ffffff"/>
 
-
-        <Button
-            android:id="@+id/key_1"
-            android:layout_width="101dp"
-            android:layout_height="103dp"
-            android:background="@drawable/button_states"
-            android:text="C"
-            android:textSize="22sp"
-            />
-
-        <Button
-            android:id="@+id/key_2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="1"
-            android:textSize="22sp"/>
-
-        <Button
-            android:id="@+id/key_3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="%"
-            android:textSize="22sp"/>
-
-        <Button
-            android:id="@+id/key_4"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="/"
-            android:textSize="22sp"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/key_c"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="2dp">
+        android:text="@string/key_c"
+        android:layout_columnWeight="1"/>
 
-
-        <Button
-            android:id="@+id/key_5"
-            android:layout_width="101dp"
-            android:layout_height="103dp"
-            android:background="@drawable/button_states"
-            android:text="7"
-            android:textSize="22sp"
-            />
-
-        <Button
-            android:id="@+id/key_6"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="8"
-            android:textSize="22sp"/>
-
-        <Button
-            android:id="@+id/key_7"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="9"
-            android:textSize="22sp"/>
-
-        <Button
-            android:id="@+id/key_8"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="x"
-            android:textSize="22sp"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/key_d"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="2dp">
+        android:text="@string/key_d"
+        android:layout_columnWeight="1"/>
 
-
-        <Button
-            android:id="@+id/key_9"
-            android:layout_width="101dp"
-            android:layout_height="103dp"
-            android:background="@drawable/button_states"
-            android:text="4"
-            android:textSize="22sp"
-            />
-
-        <Button
-            android:id="@+id/key_10"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="5"
-            android:textSize="22sp"/>
-
-        <Button
-            android:id="@+id/key_11"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="6"
-            android:textSize="22sp"/>
-
-        <Button
-            android:id="@+id/key_12"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="-"
-            android:textSize="22sp"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/key_div"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="2dp">
+        android:text="@string/key_div"
+        android:layout_columnWeight="1"/>
 
-
-        <Button
-            android:id="@+id/key_13"
-            android:layout_width="101dp"
-            android:layout_height="103dp"
-            android:background="@drawable/button_states"
-            android:text="1"
-            android:textSize="22sp"
-            />
-
-        <Button
-            android:id="@+id/key_14"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="2"
-            android:textSize="22sp"/>
-
-        <Button
-            android:id="@+id/key_15"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="3"
-            android:textSize="22sp"/>
-
-        <Button
-            android:id="@+id/key_16"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="+"
-            android:textSize="22sp"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/key_mult"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="2dp">
+        android:text="@string/key_mult"
+        android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/key_7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_7"
+        android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/key_8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_8"
+        android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/key_9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_9"
+        android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/key_minus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_minus"
+        android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/key_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_4"
+        android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/key_5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_5"
+        android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/key_6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_6"
+        android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/key_plus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_plus"
+        android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/key_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_1"
+        android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/key_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_2"
+        android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/key_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_3"
+        android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/key_minus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_minus"
+        android:layout_columnWeight="1"
+        tools:ignore="DuplicateIds" />
+
+    <Button
+        android:id="@+id/key_dot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_dot"
+        android:layout_columnWeight="1" />
 
 
-        <Button
-            android:id="@+id/key_17"
-            android:layout_width="101dp"
-            android:layout_height="103dp"
-            android:background="@drawable/button_states"
-            android:text=","
-            android:textSize="22sp"/>
-
-        <Button
-            android:id="@+id/key_18"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_states"
-            android:text="0"
-            android:textSize="22sp"/>
-
-        <Button
-            android:id="@+id/key_19"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_weight="2"
-            android:background="@drawable/button_states"
-            android:text="="
-            android:textSize="22sp"/>
+    <Button
+        android:id="@+id/key_0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_0"
+        android:layout_columnWeight="1" />
 
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/key_res"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/key_res"
+        android:layout_columnSpan="2"
+        android:layout_columnWeight="1" />
 
-
-
-</LinearLayout>
+</GridLayout>
